--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
